Many changes in this update, system can now success initial database and perform the input. There are several modules need to check and update as well.
1. Related Word
2. InputMetho Cache 
3. Score
4. Post Sorting
5. Localization 
6. System Testing...

--- a/branches/beta/res/layout/imsetting.xml
+++ b/branches/beta/res/layout/imsetting.xml
@@ -39,6 +39,9 @@
 						<Button android:layout_width="fill_parent"
 							android:layout_height="fill_parent" android:padding="20px"
 							android:id="@+id/btnSetupEz" android:text="@string/l3.manage.eazy"></Button>
+					</TableRow><TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:gravity="center">
+						<Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:padding="20px" android:id="@+id/btnSetupArray" android:text="Array"></Button><Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:padding="20px" android:id="@+id/btnEmptyNoUse" android:enabled="false"></Button>
+						
 					</TableRow>
 				</TableLayout>
 	</ScrollView>
