--- a/branches/beta/res/layout/initial.xml
+++ b/branches/beta/res/layout/initial.xml
@@ -1,18 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="center">
-  
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:gravity="center">
+
 	<ScrollView android:id="@+id/ScrollView01"
 		android:layout_height="wrap_content" android:layout_width="fill_parent"
 		android:padding="5px">
-  
-  
-<TableLayout android:id="@+id/TableLayout01" android:layout_gravity="center" android:gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content"><TableRow android:id="@+id/TableRow01" android:padding="10px"><Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:padding="20px" android:text="@string/l3.initial.btn.load_preload_db" android:id="@+id/btnInitPreloadDB"></Button><Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:padding="20px" android:id="@+id/btnResetDB" android:text="@string/l3.initial.btn.reset_db"></Button></TableRow>
-<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:gravity="center"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Backup Database" android:id="@+id/btnBackupDB"></Button>
-<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Restore Database" android:id="@+id/btnRestoreDB"></Button>
-</TableRow>
-</TableLayout>
-</ScrollView>
+
+
+		<TableLayout android:id="@+id/TableLayout01"
+			android:layout_gravity="center" android:gravity="center"
+			android:layout_height="wrap_content" android:layout_width="wrap_content">
+			<TableRow android:id="@+id/TableRow01" android:padding="10px">
+				<Button android:layout_width="fill_parent"
+					android:layout_height="fill_parent" android:padding="20px"
+					android:text="@string/l3_initial_btn_load_preload_db" android:id="@+id/btnInitPreloadDB"></Button>
+				<Button android:layout_width="fill_parent"
+					android:layout_height="fill_parent" android:padding="20px"
+					android:id="@+id/btnResetDB" android:text="@string/l3_initial_btn_reset_db"></Button>
+			</TableRow>
+			<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:padding="10px"
+				android:gravity="center">
+				<Button android:layout_width="wrap_content"
+					android:layout_height="wrap_content" android:text="Backup Database"
+					android:id="@+id/btnBackupDB"></Button>
+				<Button android:layout_width="wrap_content"
+					android:layout_height="wrap_content" android:text="Restore Database"
+					android:id="@+id/btnRestoreDB"></Button>
+			</TableRow>
+		</TableLayout>
+	</ScrollView>
 
 </LinearLayout>
