--- a/branches/beta/res/layout/imsetting.xml
+++ b/branches/beta/res/layout/imsetting.xml
@@ -42,10 +42,13 @@
 			</TableRow>
 			<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:padding="10px"
-				android:gravity="center">
+				android:gravity="center"><!--
 				<Button android:layout_width="fill_parent"
 					android:layout_height="fill_parent" android:padding="20px"
 					android:id="@+id/btnSetupArray" android:text="@string/l3_manage_array"></Button>
+				--><Button android:layout_width="fill_parent"
+					android:layout_height="fill_parent" android:padding="20px"
+					android:id="@+id/btnEmptyNoUse2" android:enabled="false"></Button>
 				<Button android:layout_width="fill_parent"
 					android:layout_height="fill_parent" android:padding="20px"
 					android:id="@+id/btnEmptyNoUse" android:enabled="false"></Button>
