1. Update ENTER action again 2. Switch to disable/enable dictionary 3. Add option "0" to suggestion amount setting 4. Result Deduplication process

--- a/LIME/res/layout/composingtext.xml
+++ b/LIME/res/layout/composingtext.xml
@@ -6,4 +6,4 @@
     android:textSize="18sp"
     android:textColor="?android:attr/textColorPrimaryInverse"
     android:minWidth="0dip"
-    android:gravity="center_vertical" android:background="@color/candidate_dictionary_background"/>
+    android:gravity="top" android:background="@color/candidate_dictionary_background"/>
