--- a/trunk/LIME/res/xml/method.xml
+++ b/trunk/LIME/res/xml/method.xml
@@ -25,4 +25,7 @@
 <!-- The attributes in this XML file provide configuration information -->
 <!-- for the Search Manager. -->
 
-<input-method xmlns:android="http://schemas.android.com/apk/res/android" />
+<input-method xmlns:android="http://schemas.android.com/apk/res/android" 
+			  android:settingsActivity="net.toload.main.LIMEMenu"/>
+			  
+			  
